k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: home
  labels:
    kubernetes.io/metadata.name: home
