k8s/oauth2-proxy-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-admin
  namespace: home
spec:
  selector:
    app: oauth2-proxy
    instance: admin
  ports:
    - name: http
      port: 4180
      targetPort: 4180
