k8s/oauth2-proxy-home-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oauth2-proxy-home
  namespace: home
spec:
  selector:
    app: oauth2-proxy
    instance: home
  ports:
    - name: http
      port: 4180
      targetPort: 4180
