k8s/portal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal
  namespace: home
spec:
  selector:
    app: portal
  ports:
  - port: 80
    targetPort: 80
